--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html class="" lang="en">
 
   <head>
+    <title>Silly story generator</title>
+
     <meta charset="utf-8">
-
-    <title>Week 5, Part 2</title>
-
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -14,13 +14,26 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/scripts.js"></script>
+
   </head>
 
   <body>
 
-    <h1>Week 5, Part 2</h1>
+    <div>
+      <label for="customname">Enter custom name:</label>
+      <input id="customname" type="text" placeholder="">
+    </div>
+    <div>
+      <label for="us">US</label><input id="us" type="radio" name="ukus" value="us" checked>
+      <label for="uk">UK</label><input id="uk" type="radio" name="ukus" value="uk">
+    </div>
+    <div>
+      <button class="randomize">Generate random story</button>
+    </div>
 
+    <p class="story"></p>
+
+    <script src="js/scripts.js"></script>
 	</body>
 
 </html>
