--- a/index.html
+++ b/index.html
@@ -1,39 +1,56 @@
 <!doctype html>
 <html class="" lang="en">
 
-  <head>
-    <title>Silly story generator</title>
+<head>
+  <meta charset="utf-8">
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Week 5, Part 2</title>
 
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/styles.css">
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" type="image/png" href="/images/favicon.png">
 
-  </head>
 
-  <body>
 
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+    <a class="navbar-brand" href="#">Murder Mystery</a>
+  </nav>
+
+  <main>
+    <div class="starter-template">
+      <img src="" alt="">
+      <h1>Murder Mystery</h1>
+      <p class="lead">Fill in Two Names for a Random Crime Story.</p>
+    </div>
     <div>
-      <label for="customname">Enter custom name:</label>
-      <input id="customname" type="text" placeholder="">
+      <label for="customNameA">Suspect:</label>
+      <input id="customNameA" type="text" placeholder="Bob">
+    </div>
+    <div>
+      <label for="customNameB">Detective:</label>
+      <input id="customNameB" type="text" placeholder="Jim">
     </div>
     <div>
       <label for="us">US</label><input id="us" type="radio" name="ukus" value="us" checked>
       <label for="uk">UK</label><input id="uk" type="radio" name="ukus" value="uk">
+      <label for="lalaland">CA</label><input id="lalaland" type="radio" name="ukus" value="lalaland"><br>
     </div>
     <div>
-      <button class="randomize">Generate random story</button>
+      <button class="randomize">Generate random story</button><br>
     </div>
-
     <p class="story"></p>
 
-    <script src="js/scripts.js"></script>
-	</body>
+  </main><!-- /.container -->
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/scripts.js"></script>
+
+</body>
 </html>
