Updated story and css

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="starter-template">
       <img src="" alt="">
       <h1>Murder Mystery</h1>
-      <p class="lead">Fill in Two Names for a Random Crime Story.</p>
+      <p class="lead">Fill in two names for a Random Crime Story</p>
     </div>
     <div>
       <label for="customNameA">Suspect:</label>
@@ -38,11 +38,10 @@
     </div>
     <div>
       <label for="us">US</label><input id="us" type="radio" name="ukus" value="us" checked>
-      <label for="uk">UK</label><input id="uk" type="radio" name="ukus" value="uk">
-      <label for="lalaland">CA</label><input id="lalaland" type="radio" name="ukus" value="lalaland"><br>
+      <label for="uk">UK</label><input id="uk" type="radio" name="ukus" value="uk"><br>
     </div>
     <div>
-      <button class="randomize">Generate random story</button><br>
+      <button class="randomize">Generate Murder</button><br>
     </div>
     <p class="story"></p>
 
